# coloring-book-generator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
coloring_book_generator/: app.py
coloring_book_generator/model/: u2net.py
